<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    android:layout_margin="5dp"
    android:backgroundTint="@color/white"
    android:id="@+id/cv_confirmPassDialog">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/dialog"
    android:background="@drawable/rounded_corner_all">
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/confirm_password"
       android:textColor="@color/black"
       android:fontFamily="@font/montserrat"
       android:textStyle="bold"
       android:textSize="21sp"
       android:id="@+id/dialogTitle"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"/>

   <EditText
       android:id="@+id/et_enterConfirmPass"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:autofillHints="password"
       android:hint="@string/enter_password"
       tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
       android:inputType="textPassword"
       android:fontFamily="@font/montserrat"
       android:backgroundTint="@color/black"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"/>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >

      <TextView
          android:id="@+id/tv_cancelPass"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="20dp"
          android:layout_marginBottom="10dp"
          android:layout_toStartOf="@+id/tv_confirmPass"
          android:fontFamily="@font/montserrat"
          android:text="@string/cancel"
          android:textColor="@color/link_blue"
          android:textSize="15sp" />

      <TextView
          android:id="@+id/tv_confirmPass"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="30dp"
          android:layout_marginBottom="10dp"
          android:fontFamily="@font/montserrat"
          android:text="@string/confirm"
          android:textColor="@color/link_blue"
          android:textSize="15sp" />
   </RelativeLayout>
</LinearLayout>
</com.google.android.material.card.MaterialCardView>