<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_newPostDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_all"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_newPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/new_post"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_imgPost"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <ImageView
                android:id="@+id/img_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:scaleType="centerCrop" />

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCaption"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_caption"
            app:counterEnabled="true"
            app:counterMaxLength="250"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tetCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="250"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_cancelPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_toStartOf="@+id/tv_postPhoto"
                android:fontFamily="@font/montserrat"
                android:text="@string/cancel"
                android:textColor="@color/link_blue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_postPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/post"
                android:textColor="@color/link_blue"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>